--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-pandas==2.2.3
+pandas==2.3.3
 openpyxl==3.1.5
-
-python-dotenv==1.0.1
-
-openai==1.63.2
-ollama==0.4.7
-
-pypandoc==1.14
-python-docx==1.1.2
+python-dotenv==1.2.1
+openai==2.21.0
+ollama==0.6.1
+pypandoc==1.16.2
+python-docx==1.2.0
+scikit-learn==1.7.2
+scipy==1.15.3
+sentence-transformers==5.2.3
+ipykernel==7.2.0
+ipython==8.38.0
